--- a/scss/containers/_container-housing.scss
+++ b/scss/containers/_container-housing.scss
@@ -7,7 +7,7 @@
     align-items: flex-start;
     row-gap: $housing__gap;
     column-gap: $housing__gap;
-    flex-basis: auto !important;
+    //flex-basis: auto !important;
 
     h3 {
         margin: 0 $housing__margin;
@@ -25,26 +25,25 @@
     }
 
     .cards {
-        padding: 0 !important;
-        margin: 0 !important;
+        //padding: 0 !important;
+        //margin: 0 !important;
         border: 1px solid black;
         flex-wrap: wrap;
         column-gap: $housing__gap;
         row-gap : $housing__gap;
-        justify-content: flex-start;
+        //justify-content: flex-start;
         //flex: 0;
-
         //flex-grow: 0;
         //flex-shrink: 0;
-        flex-wrap: wrap;
-        flex-basis: auto !important;
+        //flex-wrap: wrap;
+        //flex-basis: auto !important;
     }
 
 
     .card {
         flex-grow: 1;
         flex-direction: column;
-        height: $housing__card-height;
+        max-height: $housing__card-maxheight;
         //height: $housing__card-height;
         //min-width: $housing__card-minwidth;
     }
@@ -81,7 +80,7 @@
         background-color: $light-grey;
 
         .card {
-            flex-basis: 33% - $housing__gap;
+            flex-basis: 30%;
             //width: 33%;
         }
 
